# NarraOS

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: .gitkeep  ci.yml  dependency-boundary-check.yml
config/: .gitkeep  providers.base.yaml
config/plugins/: .gitkeep
dashboard/: .gitkeep
docs/agents/: .gitkeep
docs/api/: .gitkeep
docs/architecture/: .gitkeep  AGENT_SPECIFICATIONS.md  COMPLIANCE_ARCHITECTURE.md  DOCUMENTATION_STRUCTURE.md  MEMORY_ARCHITECTURE.md  PLUGIN_ARCHITECTURE.md  PROJECT_ARCHITECTURE.md  PROVIDER_ARCHITECTURE.md  REPOSITORY_STRUCTURE.md  SCHEMA_REFERENCE.md  YOUTUBE_ADAPTER_ARCHITECTURE.md
docs/decisions/: .gitkeep
docs/handbook/: DEVELOPER_HANDBOOK.md
docs/onboarding/: .gitkeep
docs/planning/: DAILY_DEVELOPMENT_PLAN.md  ROADMAP.md
docs/projects/: AI_CONTEXT.md  CURRENT_STATE.md  PROJECT_STATE.json
docs/runbooks/: .gitkeep
infra/docker/: .gitkeep  Dockerfile.api  Dockerfile.worker
infra/local/: .gitkeep  docker-compose.override.yml
scripts/: .gitkeep  Bootstrap.py
src/narraos/: __init__.py
src/narraos/api/: __init__.py
src/narraos/api/routes/: __init__.py
src/narraos/common/: __init__.py
src/narraos/compliance/: __init__.py
src/narraos/config/: __init__.py  loader.py  settings.py
src/narraos/core/: __init__.py
src/narraos/core/agents/: __init__.py
src/narraos/core/agents/competitor_analysis/: __init__.py
src/narraos/core/agents/compliance_review/: __init__.py
src/narraos/core/agents/fact_verification/: __init__.py
src/narraos/core/agents/feedback_loop/: __init__.py
src/narraos/core/agents/retention_optimization/: __init__.py
src/narraos/core/agents/story_generation/: __init__.py
src/narraos/core/agents/topic_research/: __init__.py
src/narraos/core/agents/trend_discovery/: __init__.py
src/narraos/core/agents/virality_prediction/: __init__.py
src/narraos/core/pipeline/: __init__.py
src/narraos/core/schemas/: __init__.py
src/narraos/core/schemas/v1/: __init__.py
src/narraos/core/stages/: __init__.py
src/narraos/core/stages/analytics_collection/: __init__.py
src/narraos/core/stages/animation_generation/: __init__.py
src/narraos/core/stages/asset_packaging/: __init__.py
src/narraos/core/stages/image_generation/: __init__.py
src/narraos/core/stages/publish/: __init__.py
src/narraos/core/stages/script_writing/: __init__.py
src/narraos/core/stages/seo_generation/: __init__.py
src/narraos/core/stages/storyboard_generation/: __init__.py
src/narraos/core/stages/thumbnail_generation/: __init__.py
src/narraos/core/stages/upload_preparation/: __init__.py
src/narraos/core/stages/video_editing/: __init__.py
src/narraos/core/stages/voice_synthesis/: __init__.py
src/narraos/db/: __init__.py
src/narraos/db/migrations/: .gitkeep
src/narraos/db/models/: __init__.py
src/narraos/memory/: __init__.py
src/narraos/observability/: __init__.py  logging.py
src/narraos/providers/: __init__.py
src/narraos/providers/analytics/: __init__.py
src/narraos/providers/analytics/implementations/: __init__.py
src/narraos/providers/embedding/: __init__.py
src/narraos/providers/embedding/implementations/: __init__.py
src/narraos/providers/image/: __init__.py
src/narraos/providers/image/implementations/: __init__.py
src/narraos/providers/llm/: __init__.py
src/narraos/providers/llm/implementations/: __init__.py
src/narraos/providers/publishing/: __init__.py
src/narraos/providers/publishing/implementations/: __init__.py
src/narraos/providers/storage/: __init__.py
src/narraos/providers/storage/implementations/: __init__.py
src/narraos/providers/stt/: __init__.py
src/narraos/providers/stt/implementations/: __init__.py
src/narraos/providers/tts/: __init__.py
src/narraos/providers/tts/implementations/: __init__.py
src/narraos/providers/vector_store/: __init__.py
src/narraos/providers/vector_store/implementations/: __init__.py
src/narraos/providers/video/: __init__.py
src/narraos/providers/video/implementations/: __init__.py
tests/fixtures/: .gitkeep
tests/fixtures/golden_run/: .gitkeep
tests/integration/: .gitkeep
tests/unit/: .gitkeep  test_smoke.py
